--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
@@ -8,7 +8,10 @@
             type="text"
             id="name"
             class="form-control"
-            #nameInput>
+            name="name"
+            ngModel
+            required
+            >
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
@@ -16,14 +19,31 @@
             type="number"
             id="amount"
             class="form-control"
-            #amountInput>
+            name="amount"
+            ngModel
+            pattern="^[1-9]+[0-9]*$"
+            required
+            >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>&nbsp;
-          <button class="btn btn-danger" type="button">Delete</button>&nbsp;
-          <button class="btn btn-primary" type="button">Clear</button>&nbsp;
+          <button
+          class="btn btn-success"
+          type="submit"
+          [disabled]="!f.valid" >
+          {{editMode ? 'Update': 'Add'}}</button>&nbsp;
+          <button
+          class="btn btn-danger"
+          type="button"
+          *ngIf="editMode"
+          (click)="onDelete()">
+          Delete</button>&nbsp;
+          <button
+          class="btn btn-primary"
+          type="button"
+          (click)="onClear()">
+          Clear</button>&nbsp;
         </div>
       </div>
     </form>
