--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -24,8 +24,8 @@
       </button>
       <ul class="dropdown-menu">
         <li><a style="cursor:pointer" (click)="onAddtoShoppinList()">To Shopping List</a></li>
-        <li><a style="cursor: pointer;" (click)="onEditRecipe()" >Edit Recipe</a></li>
-        <li><a style="cursor: pointer;" >Delete Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+        <li><a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
